# extract_api

./: .gitignore  amazon.csv  amazon.txt  collect_info.ipynb  main.py  output.csv  output.txt  output_gpt.csv  output_gpt.txt  pyproject.toml  requirements.txt  sec_parser.ipynb  sec_parser.txt  sec_parser_bis.ipynb  vercel.json
api/: index.py
templates/: index.html  old_index.html
