[project]
name = "extract-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.128.0",
    "mangum==0.20.0",
    "Levenshtein==0.27.3",
    "fitz==0.0.1.dev2",
    "frontend==0.0.3",
    "groq==1.0.0",
    "tools==1.0.21",
    "beautifulsoup4==4.14.3",
    "bs4==0.0.2",
    "groq==1.0.0",
    "dotenv==0.9.9",
    "Jinja2==3.1.6",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22"
]